# tree-sitter-move-aptos

./: Cargo.toml  Makefile  Package.swift  README.md  README_zh.md  grammar.js  package-lock.json  package.json  pyproject.toml  run_test.sh  setup.py  test.move  tree-sitter.json
bindings/node/: binding.cc
bindings/python/tree_sitter_move/: __init__.py
bindings/python/tree_sitter_move_on_aptos/: __init__.py
bindings/rust/: build.rs  lib.rs
queries/: highlights.scm  injections.scm  locals.scm  tags.scm
src/: grammar.json  node-types.json  parser.c
test/: BUG.md  Move.toml  README.md
test/scripts/: script.move
test/sources/: AbortAssert.move  For.move  type.move
