[package]
name = "tree-sitter-move"
description = "Move grammar for tree-sitter"
version = "0.0.1"
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "move"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-move"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[dev-dependencies]
tree-sitter = { version = "0.22" }

[build-dependencies]
cc = "1.0.87"
